fix overflow on xl devices

--- a/src/assets/styles/tailwind.css
+++ b/src/assets/styles/tailwind.css
@@ -10,7 +10,7 @@ body {
 
 @screen xl {
   body {
-    @apply bg-powder;
+    @apply bg-powder overflow-x-hidden;
   }
   .container-left {
     max-width: 608px;
